commit translated contents

--- a/articles/active-directory/governance/index.yml
+++ b/articles/active-directory/governance/index.yml
@@ -1,56 +1,69 @@
-### YamlMime:YamlDocument
-documentType: LandingData
-title: Documentatie over Azure AD-identiteitsbeheer
+### YamlMime:Landing
+title: Documentatie over Azure Active Directory Identity Governance
+summary: Met Azure Active Directory (Azure AD) Identity Governance kunt u de toegang tot kritieke activa beveiligen, bewaken en controleren waarbij productiviteit van werknemers wordt gegarandeerd.
 metadata:
-  document_id: null
-  title: Documentatie over identiteitsbeheer in Azure Active Directory | Microsoft Docs
-  description: 'Meer informatie over identiteitslevenscyclusbeheer, toegangslevenscyclusbeheer en veilig beheer van zowel werknemers als partners.'
-  services: active-directory
   author: msaburnley
+  description: Ontdek hoe u de toegang tot kritieke activa kunt beveiligen, bewaken en controleren waarbij productiviteit van werknemers wordt gegarandeerd.
   manager: daveba
-  ms.service: active-directory
-  ms.tgt_pltfrm: na
-  ms.devlang: na
-  ms.topic: landing-page
-  ms.date: 04/18/2019
   ms.author: ajburnle
-abstract:
-  description: 'Identiteitsbeheer in Azure Active Directory (Azure AD) biedt organisaties de mogelijkheid om de identiteitslevenscyclus en de toegangslevenscyclus te beheren, en maakt veilig beheer van werknemers en partners mogelijk.'
-  aside:
-    image:
-      alt: null
-      height: 112
-      src: media/index/video-thumb-identity-governance.png
-      width: 200
-    title: 'Toegang tot resources beheren (1:17:24)'
-    href: 'https://www.youtube.com/embed/aY7A0Br8u5M'
-    width: 200
-sections:
-  - title: Identiteitsbeheer
-    items:
-      - type: list
-        style: unordered
-        items:
-          - html: <a href="/azure/active-directory/governance/identity-governance-overview">Wat is identiteitsbeheer?</a>
-  - title: Rechtenbeheer (preview-versie)
-    items:
-      - type: list
-        style: unordered
-        items:
-          - html: <a href="/azure/active-directory/governance/entitlement-management-overview">Wat is Azure AD-rechtenbeheer?</a>
-          - html: <a href="/azure/active-directory/governance/entitlement-management-access-package-first">Zelfstudie - Uw eerste toegangspakket maken</a>
-          - html: <a href="/azure/active-directory/governance/entitlement-management-access-package-edit">Een bestaand toegangspakket bewerken en beheren</a>
-  - title: Toegangsbeoordelingen
-    items:
-      - type: list
-        style: unordered
-        items:
-          - html: <a href="/azure/active-directory/governance/access-reviews-overview">Wat zijn toegangsbeoordelingen in Azure Active Directory?</a>
-          - html: <a href="/azure/active-directory/governance/create-access-review">Een toegangsbeoordeling van groepen of apps maken</a>
-          - html: <a href="/azure/active-directory/governance/perform-access-review">Toegang tot groepen of apps beoordelen</a>
-  - title: Gebruiksvoorwaarden
-    items:
-      - type: list
-        style: unordered
-        items:
-          - html: <a href="/azure/active-directory/conditional-access/terms-of-use">Gebruiksvoorwaarden vereisen?</a>
+  ms.collection: na
+  ms.date: 08/08/2019
+  ms.service: active-directory
+  ms.subservice: na
+  ms.topic: landing-page
+  services: active-directory
+  ms.openlocfilehash: fa7577ea7ef212242a903b20d44db80c22c55842
+  ms.sourcegitcommit: 78ebf29ee6be84b415c558f43d34cbe1bcc0b38a
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 08/12/2019
+  ms.locfileid: "68949538"
+landingContent:
+- title: Meer informatie over Identity Governance
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Wat is Azure AD Identity Governance?
+      url: identity-governance-overview.md
+  - linkListType: learn
+    links:
+    - text: Toegang tot uw resources beheren
+      url: https://www.youtube.com/watch?v=bFfowdpApu4&list=PLQXpv_NQsPIBg3op2xONM9KgwlayFDue6
+- title: De levenscyclus van toegang tot groepen, apps en sites beheren
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Wat is Azure AD-rechtenbeheer? (Preview)
+      url: entitlement-management-overview.md
+  - linkListType: tutorial
+    links:
+    - text: Uw eerste toegangspakket maken waarmee gebruikers de benodigde toegang kunnen aanvragen
+      url: entitlement-management-access-package-first.md
+  - linkListType: how-to-guide
+    links:
+    - text: Een bestaand toegangspakket bewerken en beheren
+      url: entitlement-management-access-package-edit.md
+- title: Toegang tot groepen, apps en bevoorrechte rollen opnieuw certificeren
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Wat zijn toegangsbeoordelingen in Azure AD?
+      url: access-reviews-overview.md
+  - linkListType: how-to-guide
+    links:
+    - text: Een toegangsbeoordeling maken om ervoor te zorgen dat gebruikers geen onnodige toegang behouden
+      url: create-access-review.md
+    - text: Toegang tot groepen of apps beoordelen
+      url: perform-access-review.md
+- title: Gebruikers geschikt maken voor bevoorrechte rollen
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Wat is Azure AD Privileged Identity Management?
+      url: ../privileged-identity-management/pim-configure.md
+- title: Ervoor zorgen dat gebruikers disclaimers zien
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Vereisen dat gebruikers akkoord gaan met gebruiksvoorwaarden wanneer ze een app gebruiken
+      url: ../conditional-access/terms-of-use.md
