--- a/articles/machine-learning/service/index.yml
+++ b/articles/machine-learning/service/index.yml
@@ -11,7 +11,7 @@ metadata:
   manager: jhubbard
   author: j-martens
   ms.author: jmartens
-  ms.date: 05/14/2019
+  ms.date: 08/13/2019
   ms.custom: seodec18
   ms.tgt_pltfrm: na
   ms.devlang: na
@@ -46,6 +46,7 @@ sections:
           - html: <a href="tutorial-1st-experiment-sdk-setup">Stel uw omgeving in en train uw eerste ML-experiment.</a>
           - html: <a href="tutorial-train-models-with-aml">Train en implementeer modellen voor classificatie van afbeeldingen.</a>
           - html: <a href="tutorial-data-prep">Bereid gegevens voor en gebruik geautomatiseerde ML om taxitarieven te voorspellen</b>.</a>
+          - html: <a href="how-to-run-batch-predictions">Voer batchvoorspellingen uit voor grote gegevenssets met ML-pijplijnen</b>.</a>
   - title: Voorbeelden
     items:
       - type: paragraph
