--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -197,6 +197,8 @@
       items:
         - name: Toepassingsmodel
           href: service-fabric-application-model.md
+        - name: Sjablonen voor toepassingsmodellen maken
+          href: service-fabric-concept-resource-model.md
         - name: Toepassings- en servicemanifesten
           href: service-fabric-application-and-service-manifests.md
         - name: Voorbeelden van toepassings- en servicemanifesten
@@ -350,6 +352,10 @@
           href: service-fabric-diagnostics-partners.md
     - name: Integratie met API Management
       href: service-fabric-api-management-overview.md
+    - name: App-resourcemodel
+      href: service-fabric-concept-resource-model.md
+    - name: Beheerde identiteit
+      href: concepts-managed-identity.md
 - name: Handleidingen
   items:
     - name: De ontwikkelomgeving instellen
@@ -741,6 +747,26 @@
           href: service-fabric-reverse-proxy-diagnostics.md
         - name: Problemen met uw lokale cluster oplossen
           href: service-fabric-troubleshoot-local-cluster-setup.md
+    - name: Beheerde identiteit voor Service Fabric-apps gebruiken
+      items:
+        - name: Clusterinstallatie
+          items:
+            - name: Een bestaand cluster configureren met beheerde identiteit
+              href: configure-existing-cluster-enable-managed-identity-token-service.md
+            - name: Een nieuw Azure Service Fabric-cluster configureren met beheerde identiteit
+              href: configure-new-azure-service-fabric-enable-managed-identity.md
+        - name: Installatie van toepassing
+          items:
+            - name: Een toepassing implementeren met beheerde identiteit
+              items:
+                - name: Een toepassing implementeren met een door het systeem toegewezen beheerde identiteit
+                  href: how-to-deploy-service-fabric-application-system-assigned-managed-identity.md
+                - name: Een toepassing implementeren met een door de gebruiker toegewezen beheerde identiteit
+                  href: how-to-deploy-service-fabric-application-user-assigned-managed-identity.md
+        - name: MITS met Service Fabric-toepassingscode gebruiken
+          href: how-to-managed-identity-service-fabric-app-code.md
+        - name: Toegang tot andere Azure-resources verlenen
+          href: how-to-grant-access-other-resources.md
 - name: Naslaginformatie
   items:
     - name: Azure PowerShell
