--- a/articles/sdks/TOC.yml
+++ b/articles/sdks/TOC.yml
@@ -16,4 +16,4 @@
     - name: Xamarin
       href: 'https://azure.microsoft.com/features/xamarin'
     - name: Aan de slag
-      href: /go/azure/
+      href: /azure/go/
