--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -35,6 +35,8 @@
       href: powershell-samples.md
     - name: Azure-CLI
       href: cli-samples.md
+    - name: Resource Manager-sjablonen
+      href: resource-manager-template-samples.md
 - name: Concepten
   items:
     - name: Basisbeginselen
@@ -95,9 +97,6 @@
           href: tutorial-manage-web-traffic-powershell.md
         - name: Azure-CLI
           href: tutorial-manage-web-traffic-cli.md
-        - name: Template
-          displayName: 'ARM, Resource Manager, template'
-          href: create-vmss-template.md
     - name: Een interne load balancer configureren
       items:
         - name: Azure Portal
