commit translated contents

--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -127,8 +127,14 @@
               href: active-directory-b2c-setup-goog-app.md
             - name: LinkedIn
               href: active-directory-b2c-setup-li-app.md
+            - name: QQ
+              href: active-directory-b2c-setup-qq-app.md
             - name: Twitter
               href: active-directory-b2c-setup-twitter-app.md
+            - name: WeChat
+              href: active-directory-b2c-setup-wechat-app.md
+            - name: Weibo
+              href: active-directory-b2c-setup-weibo-app.md
             - name: Algemene id-providers
               href: active-directory-b2c-setup-oidc-idp.md
         - name: Tokens en sessiebeheer
@@ -221,6 +227,8 @@
           items:
             - name: Logboeken verzamelen met Application Insights
               href: active-directory-b2c-troubleshoot-custom.md
+            - name: Beleidsvalidatie
+              href: active-directory-b2c-guide-troubleshooting-custom.md
         - name: Gebruiksanalyse
           href: active-directory-b2c-custom-guide-eventlogger-appins.md
         - name: Naslaginformatie
