--- a/articles/cognitive-services/immersive-reader/index.yml
+++ b/articles/cognitive-services/immersive-reader/index.yml
@@ -51,7 +51,9 @@ sections:
       - type: list
         style: unordered
         items:
-          - html: <a href="tutorial.md">Insluitende lezer starten met behulp van Node.js</a>
+          - html: <a href="tutorial-nodejs.md">Insluitende lezer starten met behulp van Node.js</a>
+          - html: <a href="tutorial-python.md">Insluitende lezer starten met behulp van Python</a>
+          - html: <a href="tutorial-ios-picture-immersive-reader.md">Insluitende lezer starten met behulp van Swift</a>
   - title: Naslaginformatie
     items:
       - type: list
