--- a/articles/cognitive-services/personalizer/toc.yml
+++ b/articles/cognitive-services/personalizer/toc.yml
@@ -29,7 +29,7 @@
       items:
         - name: Actie en context
           href: concepts-features.md
-          displayName: 'action, context, feature, namespace, JSON, best practice, set'
+          displayName: 'action, context, feature, namespace, JSON, best practice, set, ID, guid, event id,'
         - name: Actief leren
           href: concept-active-learning.md
           displayName: 'active, inactive'
@@ -50,6 +50,14 @@
           href: concept-feature-evaluation.md
     - name: Schaalbaarheid en prestaties
       href: concepts-scalability-performance.md
+- name: Demonstraties
+  items:
+    - name: Website met nieuwsinhoud
+      href: 'https://personalizerdemo-staging.azurewebsites.net/'
+    - name: Website met winkelinhoud
+      href: 'http://personalizer-traveldemo.azurewebsites.net/'
+    - name: Voorbeeldcode voor demonstraties
+      href: 'https://github.com/Azure-Samples/cognitive-services-personalizer-samples/tree/master/demos'
 - name: Handleidingen
   items:
     - name: Personalizer maken en configureren
