--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -45,7 +45,7 @@ sections:
     items:
       - type: paragraph
         text: |
-          U kunt de Speech-SDK (<a href="releasenotes.md">opmerkingen bij de release</a>) gebruiken om de volgende mogelijkheden (en meer) aan uw apps toe te voegen&colon; 
+          U kunt de Speech-SDK (<a href="releasenotes.md">opmerkingen bij de release</a>) gebruiken om de volgende mogelijkheden (en meer) aan uw apps toe te voegen&colon;
           <div class="row"><div class="column"><ul>
           <li><b><a href="speech-to-text.md">spraak naar tekst</a></b> (spraakherkenning/SR)</li>
           <li><b><a href="speech-devices-sdk-create-kws.md">aangepast activeringswoord</a></b> (woorden herkennen/KWS)</li>
@@ -253,10 +253,9 @@ sections:
       - type: list
         style: unordered
         items:
-          - html: <a href="speech-to-text-sample.md">Spraak-naar-tekst (spraakherkenning)</a><br/>
-          - html: <a href="intent.md">Intentieherkenning</a><br/>
-          - html: <a href="translation.md">Omzetting</a>
-          - html: <a href="quickstart-text-to-speech-dotnet-windows.md">Tekst naar spraak</a><br/>
+          - html: '<a href="how-to-recognize-intents-from-speech-csharp.md">Spraakintenties herkennen met LUIS, C#</a><br/>'
+          - html: '<a href="tutorial-voice-enable-your-bot-speech-sdk.md">Spraak inschakelen voor uw bot met de Speech-SDK, C#</a><br/>'
+          - html: '<a href="../translator/tutorial-build-flask-app-translation-synthesis.md?toc=%2fazure%2fcognitive-services%2fspeech-service%2ftoc.json&bc=%2fazure%2fcognitive-services%2fspeech-service%2fbreadcrumb%2ftoc.json">Een Flask-app bouwen om tekst te vertalen en spraak om te zetten, REST</a><br/>'
   - title: Voorbeelden
     items:
       - type: paragraph
