--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -58,6 +58,12 @@
   items:
     - name: ESP-clusters maken en synchroniseren met on-premises
       href: apache-domain-joined-create-configure-enterprise-security-cluster.md
+    - name: Problemen oplossen
+      items:
+        - name: Verificatieproblemen
+          href: ./domain-joined-authentication-issues.md
+        - name: Aanmelden bij Zeppelin mislukt
+          href: ./domain-joined-zeppelin-signin.md
 - name: Naslaginformatie
   items:
     - name: Codevoorbeelden
