--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -106,12 +106,12 @@
             - name: Autorisatie
               href: ../common/storage-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
               items:
-                - name: Verifiëren met Azure AD
+                - name: Autoriseren met Azure AD
                   href: ../common/storage-auth-aad.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Autoriseren met gedeelde sleutel
                   href: /rest/api/storageservices/authorize-with-shared-key
-                - name: Autoriseren met SAS
-                  href: ../common/storage-dotnet-shared-access-signature-part-1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 'Toegang delegeren met handtekeningen voor gedeelde toegang (Shared Access Signatures, SAS)'
+                  href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Anonieme toegang tot blobs
                   href: storage-manage-access-to-resources.md
             - name: Onveranderbare blobs
@@ -322,11 +322,11 @@
                       href: ../common/storage-auth-aad-rbac-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                     - name: Azure-CLI
                       href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: Verifiëren met Azure AD
+                - name: Verifiëren en autoriseren met Azure AD
                   items:
-                    - name: Verifiëren met een beheerde identiteit
+                    - name: Autoriseren met een beheerde identiteit
                       href: ../common/storage-auth-aad-msi.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: Verifiëren vanuit een toepassing
+                    - name: Autoriseren vanuit een toepassing
                       href: ../common/storage-auth-aad-app.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Autoriseren met gedeelde sleutel
                   items:
@@ -334,6 +334,22 @@
                       href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                     - name: De Azure Storage REST API gebruiken
                       href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 'Toegang delegeren met handtekeningen voor gedeelde toegang (Shared Access Signatures, SAS)'
+                  items:
+                    - name: Een SAS voor gebruikersdelegatie maken
+                      items:
+                        - name: PowerShell
+                          href: storage-blob-user-delegation-sas-create-powershell.md
+                        - name: Azure-CLI
+                          href: storage-blob-user-delegation-sas-create-cli.md
+                        - name: .NET
+                          href: storage-blob-user-delegation-sas-create-dotnet.md
+                    - name: Een service-SAS maken (.NET)
+                      href: storage-blob-service-sas-create-dotnet.md
+                    - name: Een account-SAS maken (.NET)
+                      href: ../common/storage-account-sas-create-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                    - name: Opgeslagen toegangsbeleid definiëren
+                      href: ../common/storage-stored-access-policy-define-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Door de klant beheerde sleutels configureren voor serviceversleuteling
               items:
                 - name: Portal
