--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -38,12 +38,12 @@
         - name: Autorisatie
           href: ../common/storage-auth.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
           items:
-            - name: Verifiëren met Azure AD
+            - name: Verifiëren en autoriseren met Azure AD
               href: ../common/storage-auth-aad.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
             - name: Autoriseren met gedeelde sleutel
               href: /rest/api/storageservices/authorize-with-shared-key
             - name: Autoriseren met SAS
-              href: ../common/storage-dotnet-shared-access-signature-part-1.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+              href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Geavanceerde beveiliging tegen bedreigingen
           href: ../common/storage-advanced-threat-protection.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Algemene Azure-beveiligingskenmerken
@@ -118,11 +118,11 @@
                   href: ../common/storage-auth-aad-rbac-powershell.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
                 - name: Azure-CLI
                   href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-            - name: Verifiëren met Azure AD
+            - name: Verifiëren en autoriseren met Azure AD
               items:
-                - name: Verifiëren met een beheerde identiteit
+                - name: Autoriseren met een beheerde identiteit
                   href: ../common/storage-auth-aad-msi.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-                - name: Verifiëren vanuit een toepassing
+                - name: Autoriseren vanuit een toepassing
                   href: ../common/storage-auth-aad-app.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
             - name: Autoriseren met gedeelde sleutel
               items:
