--- a/articles/hdinsight/hadoop/TOC.yml
+++ b/articles/hdinsight/hadoop/TOC.yml
@@ -310,6 +310,8 @@
           href: ./apache-ambari-troubleshoot-fivezerotwo-error.md
         - name: Apache Ambari-hosts en -services zijn buiten werking
           href: ./apache-ambari-troubleshoot-down-hosts-services.md
+        - name: Geen toegang tot Data Lake-gegevens
+          href: ./hdinsight-troubleshoot-data-lake-files.md
         - name: Problemen met een traag of niet werkend HDInsight-cluster oplossen
           href: ../hdinsight-troubleshoot-failed-cluster.md?toc=/azure/hdinsight/hadoop/toc.json&bc=/azure/hdinsight/hadoop/breadcrumb/toc.json
         - name: Problemen met Apache Hadoop HDFS oplossen
