--- a/articles/machine-learning/service/index.yml
+++ b/articles/machine-learning/service/index.yml
@@ -45,8 +45,8 @@ sections:
         items:
           - html: <a href="tutorial-1st-experiment-sdk-setup">Stel uw omgeving in en train uw eerste ML-experiment.</a>
           - html: <a href="tutorial-train-models-with-aml">Train en implementeer modellen voor classificatie van afbeeldingen.</a>
-          - html: <a href="tutorial-data-prep">Bereid gegevens voor en gebruik geautomatiseerde ML om taxitarieven te voorspellen</b>.</a>
-          - html: <a href="how-to-run-batch-predictions">Voer batchvoorspellingen uit voor grote gegevenssets met ML-pijplijnen</b>.</a>
+          - html: <a href="tutorial-data-prep">Bereid gegevens voor en gebruik geautomatiseerde ML om taxitarieven te voorspellen.</b></a>
+          - html: <a href="how-to-run-batch-predictions">Voer batchvoorspellingen uit voor grote gegevenssets met ML-pijplijnen.</b></a>
   - title: Voorbeelden
     items:
       - type: paragraph
@@ -56,10 +56,10 @@ sections:
       - type: list
         style: unordered
         items:
-          - html: '<a href="https://aka.ms/aml-sdk">Centrale Python-SDK</a>: de belangrijkste functionaliteit, geautomatiseerde machine learning, pijplijnen en meer'
-          - html: '<a href="https://aka.ms/aml-monitoring-sdk">Python SDK voor bewaking</a>: gegevens verzamelen over geïmplementeerde webservices'
-          - html: <a href="../algorithm-module-reference/module-reference.md">Algoritme- & moduleverwijzing</a> voor de visuele interface
-          - html: '<a href="https://docs.microsoft.com/cli/azure/ext/azure-cli-ml/ml?view=azure-cli-latest">Azure ML CLI</a>: een CLI-extensie voor machine learning'
+          - html: '<a href="https://aka.ms/aml-sdk">Centrale Python-SDK</a>-documenten: meer informatie over de belangrijkste functionaliteit, geautomatiseerde ML, pijplijnen en meer.'
+          - html: 'Python-SDK-documenten voor <a href="https://aka.ms/aml-monitoring-sdk">bewaking</a>: meer informatie over gegevens verzamelen over geïmplementeerde webservices'
+          - html: <a href="../algorithm-module-reference/module-reference.md">Algoritme- en moduleverwijzing</a>-documenten voor de modules van de visuele interface.
+          - html: '<a href="https://docs.microsoft.com/cli/azure/ext/azure-cli-ml/ml?view=azure-cli-latest">Azure ML CLI</a>: meer informatie over de extensie van de ML-opdrachtregelinterface.'
   - title: Andere Azure Machine Learning-technologieën
     items:
       - type: list
