--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -461,6 +461,8 @@
               href: ./partner-center-portal/pc-saas-fulfillment-api-v1.md
             - name: SaaS-uitvoerings-API's - Veelgestelde vragen
               href: ./partner-center-portal/saas-fulfillment-apis-faq.md
+        - name: Test drive uw aanbieding
+          href: ./partner-center-portal/test-drive.md
     - name: Publicatiestatus
       href: ./partner-center-portal/publishing-status.md
     - name: Bestaande aanbiedingen bijwerken
