--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -41,6 +41,8 @@
           href: ../common/storage-redundancy-zrs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Geografisch redundante opslag
           href: ../common/storage-redundancy-grs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: Geografisch zone-redundante opslag
+          href: ../common/storage-redundancy-gzrs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Momentopnamen van Azure-bestandsshares
       href: storage-snapshots-files.md
     - name: Schaalbaarheids- en prestatiedoelen
